<resources>
    <string name="app_name" translatable="false">File Recovery</string>
    <string name="capacity">Capacity</string>
    <string name="_60">0%</string>
    <string name="_65gb_used">65GB used </string>
    <string name="of_128gb">of 128GB</string>
    <string name="gb" translatable="false">GB</string>
    <string name="used">used</string>
    <string name="of">of</string>
    <string name="photo">Photo</string>
    <string name="videos">Videos</string>
    <string name="video">Video</string>
    <string name="other">Other</string>
    <string name="recover_tools">Recover tools</string>
    <string name="photos">Photos</string>
    <string name="audios">Audios</string>
    <string name="audio">Audio</string>
    <string name="documents">Documents</string>
    <string name="document">Document</string>
    <string name="contacts">Contacts</string>
    <string name="storage_tools">Storage tools</string>
    <string name="recovered_files">Recovered Files</string>
    <string name="view_recovered_items">View recovered items</string>
    <string name="junk_remover">Junk Remover</string>
    <string name="clean_junk_files">Clean junk files</string>
    <string name="_150_50_mb">150.50 MB</string>
    <string name="whatsapp_recovery">WhatsApp Recovery</string>
    <string name="recover_chats_media"><![CDATA[Recover chats & media]]></string>
    <string name="please_do_not_uninstall_this_file_recovery_to_avoid_file_loss">Please do not uninstall this File recovery to avoid file loss</string>
    <string name="no_photo_found_for_recovered">No Photo found for recovered</string>
    <string name="scan_deleted_photos">Scan deleted Photos</string>
    <string name="no_video_found_for_recovered">No Video found for recovered</string>
    <string name="no_audio_found_for_recovered">No Audio found for recovered</string>
    <string name="no_document_found_for_recovered">No Document found for recovered</string>
    <string name="scan_deleted_videos">Scan deleted videos</string>
    <string name="scan_deleted_audios">Scan deleted Audios</string>
    <string name="scan_deleted_documents">Scan deleted Documents</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="if_you_exit_the_scan_results_will_be_deleted">If you exit, the scan results will be deleted</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="delete_this_file">Delete this File?</string>
    <string name="this_files_will_be_completely_deleted_and_cannot_be_recovered">This files will be completely deleted and cannot be recovered</string>
    <string name="delete">Delete</string>
    <string name="_7_gb">7 GB</string>
    <string name="settings">Settings</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="remove_ads_amp_enjoy_more_benefits"><![CDATA[Remove ads & enjoy more benefits]]></string>
    <string name="change_language">Change language</string>
    <string name="rate_us">Rate US</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="share_the_app">Share the App</string>
    <string name="choose_language">Choose Language</string>
    <string name="defualt">Defualt</string>
    <string name="system_language">(System Language)</string>
    <string name="tap_to_scan_photos">Tap to scan Photos</string>
    <string name="tap_to_scan_audios">Tap to scan Audios</string>
    <string name="tap_to_scan_videos">Tap to scan Videos</string>
    <string name="tap_to_scan_documents">Tap to scan Documents</string>
    <string name="scanning">Scanning...</string>
    <string name="scanning_please_wait">Scanning, Please wait.....</string>
    <string name="tried_of_waiting_x3_faster_with_pro">Tried of waiting? x3 faster with pro</string>
    <string name="scan_completed">Scan Completed</string>
    <string name="view">View</string>
    <string name="found_recovery">Found %1$s %2$s recovery</string>
    <string name="recovery">%1$s Recovery</string>
    <string name="rescan">Rescan</string>
    <string name="select_all">Select all</string>
    <string name="yesterday">Yesterday</string>
    <string name="select">Select</string>
    <string name="sort_by">Sort by</string>
    <string name="largest">Largest</string>
    <string name="smallest">Smallest</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="filters_by_date">Filters by date</string>
    <string name="all_day">All day</string>
    <string name="within_7_days">Within 7 days</string>
    <string name="within_1_month">Within 1 month</string>
    <string name="within_6_months">Within 6 months</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="preview">Preview</string>
    <string name="recover">Recover</string>
    <string name="name">Name</string>
    <string name="_2505005_jpg" translatable="false">2505005.jpg</string>
    <string name="path">Path</string>
    <string name="resolution">Resolution</string>
    <string name="_249_374" translatable="false">249*374</string>
    <string name="storage_emulate_0_pictures_movies_thumbnail_2505005_jpg" translatable="false">Storage/emulate/0/pictures/movies/thumbnail/2505005.jpg</string>
    <string name="size">Size</string>
    <string name="_40_kb">40 KB</string>
    <string name="date">Date</string>
    <string name="apr_20_2025">Apr 20,2025</string>
    <string name="permission_is_require_to_access">Permission is require to access</string>
    <string name="please_allow_access_to_manage_all_files_otherwise_the_app_can_not_scan_and_restore_any_data_on_the_device">Please allow access to manage all files. Otherwise the App can not scan and restore any data on the device.</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="recover_with_count">Recover (%1$s)</string>
    <string name="backup_with_count">Backup (%1$s)</string>
    <string name="next">Next</string>
    <string name="recover_all_deleted_photos_and_videos">Recover all deleted photos and videos</string>
    <string name="recover_easily_and_quickly">Recover easily and quickly</string>
    <string name="contacts_recovery">Contacts Recovery</string>
    <string name="_1024_files">%1$s files</string>
    <string name="gb_without_space">%1$sGB</string>
    <string name="used_of">used of %1$s</string>
    <string name="gb_with_space">%1$s GB</string>
    <string name="file_recovered_successfully">File recovered successfully</string>
    <string name="file_not_found">File not found</string>
    <string name="file_does_not_exist">File does not exist</string>
    <string name="file_deleted_successfully">File deleted successfully</string>
    <string name="failed_to_delete_file">Failed to delete file</string>
    <string name="_20_files">%1$s files</string>
    <string name="delete_size">Delete (%1$s)</string>
    <string name="if_the_is_missing_rescan">If the %1$s is missing rescan</string>
    <string name="category_recovery">%1$s Recovery</string>
    <string name="share">Share</string>
    <string name="all">All</string>
    <string name="total_duration">" / %1$s"</string>
    <string name="all_contacts">All Contacts</string>
    <string name="view_all_contact_and_recover_them_up">View all contact and recover them up</string>
    <string name="deleted_contacts">Deleted contacts</string>
    <string name="backup_contacts">Backup contacts</string>
    <string name="find_and_recover_deleted_contacts">Find and recover deleted contacts</string>
    <string name="recovering">Recovering...</string>
    <string name="it_may_take_a_few_seconds_to_recover_the_file_s_please_wait">It may take a few seconds to recover the file(s), please wait...</string>
    <string name="recovered_successful">Recovered Successful</string>
    <string name="continue_text">Continue</string>
    <string name="has_been_save_to_the_device">%1$s has been save to the device</string>
    <string name="backup">Backup</string>
    <string name="go_back">Go back</string>
    <string name="no_deleted_contacts">No deleted contacts</string>
    <string name="no_all_contacts">No All contacts</string>
    <string name="no_backup_contacts">No Backup contacts</string>
    <string name="junk_removal_title">Clean Junk Files</string>
    <string name="junk_removal_message">Found %s of junk files. Would you like to clean them?</string>
    <string name="clean">Clean</string>
    <string name="junk_removed_message">Successfully removed junk files</string>
    <string name="contacts_recovered_successfully">Contacts recovered successfully</string>
    <string name="please_select_at_least_one_contact_to_backup">Please select at least one contact to backup</string>
    <string name="please_select_at_least_one_contact_to_recover">Please select at least one contact to recover</string>
    <string name="please_select_a_backup_file_to_recover">Please select a backup file to recover</string>
    <string name="duration">Duration</string>
    <string name="_0_5_minute">0-5 Minute</string>
    <string name="_5_20_minute">5-20 Minute</string>
    <string name="_20_60_minute">20-60 Minute</string>
    <string name="_60_minute"><![CDATA[>60 Minute]]></string>
    <string name="no_photos_found">No photos found</string>
    <string name="no_audio_found">No audios found</string>
    <string name="no_videos_found">No videos found</string>
    <string name="no_documents_found">No documents found</string>
    <string name="found_file_count">Found %1$s: %2$s</string>
    <string name="speed_up_now">Speed up now</string>
    <string name="upgrade">Upgrade</string>
    <string name="pro">Pro</string>
    <string name="start">Start</string>
    <string name="please_wait">Please Wait...</string>
    <string name="cleaning_junk_files">Cleaning junk files...</string>
    <string name="_0_500_kb">0 - 500 KB</string>
    <string name="_500kb_1mb">500KB - 1MB</string>
    <string name="_1mb_10mb">1MB - 10MB</string>
    <string name="_10mb"><![CDATA[> 10MB]]></string>
    <string name="version">Version %1$s</string>
    <string name="found_contacts">Found Contacts: %1$s</string>
    <string name="please_enter_a_name">Please enter a name</string>
    <string name="the_contacts_will_be_backed_up_to_a_local_vcf_file_you_can_also_find_them_in_backups">The contacts will be backed up to a local VCF file, you can also find them in “ Backups”.</string>
    <string name="back_up">Back up</string>
    <string name="backup_successful">Backup Successful</string>
    <string name="please_select_at_least_one_contact_to_share">Please select at least one contact to share</string>
</resources>