<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_rounded_card"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <View
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_5sdp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/card_background_white_rounded"
        android:backgroundTint="@color/gray_stroke"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/sort_by"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp">

            <TextView
                android:id="@+id/btnLargest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/language_card_unselected"
                android:fontFamily="@font/open_sans_semi_bold"
                android:gravity="center"
                android:text="@string/largest"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/btnSmallest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/language_card_unselected"
                android:fontFamily="@font/open_sans_semi_bold"
                android:gravity="center"
                android:text="@string/smallest"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_6sdp">

            <TextView
                android:id="@+id/btnNewest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/language_card_unselected"
                android:fontFamily="@font/open_sans_semi_bold"
                android:layout_marginEnd="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/newest"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/btnOldest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/language_card_unselected"
                android:fontFamily="@font/open_sans_semi_bold"
                android:gravity="center"
                android:text="@string/oldest"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/filters_by_date"
        android:fontFamily="@font/open_sans_semi_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp">

            <TextView
                android:id="@+id/btnAllDay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/language_card_unselected"
                android:fontFamily="@font/open_sans_semi_bold"
                android:gravity="center"
                android:text="@string/all_day"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/btn7Days"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/language_card_unselected"
                android:fontFamily="@font/open_sans_semi_bold"
                android:gravity="center"
                android:text="@string/within_7_days"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_5sdp">

            <TextView
                android:id="@+id/btn1Month"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/language_card_unselected"
                android:fontFamily="@font/open_sans_semi_bold"
                android:gravity="center"
                android:text="@string/within_1_month"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/btn6Months"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/language_card_unselected"
                android:fontFamily="@font/open_sans_semi_bold"
                android:gravity="center"
                android:text="@string/within_6_months"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDurationSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:fontFamily="@font/open_sans_semi_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp">

                <TextView
                    android:id="@+id/btnDuration0_5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/language_card_unselected"
                    android:fontFamily="@font/open_sans_semi_bold"
                    android:gravity="center"
                    android:text="@string/_0_5_minute"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/btnDuration5_20"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/language_card_unselected"
                    android:fontFamily="@font/open_sans_semi_bold"
                    android:gravity="center"
                    android:text="@string/_5_20_minute"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:id="@+id/btnDuration20_60"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/language_card_unselected"
                    android:fontFamily="@font/open_sans_semi_bold"
                    android:gravity="center"
                    android:text="@string/_20_60_minute"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/btnDurationOver60"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/language_card_unselected"
                    android:fontFamily="@font/open_sans_semi_bold"
                    android:gravity="center"
                    android:text="@string/_60_minute"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSizeSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:fontFamily="@font/open_sans_semi_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp">

                <TextView
                    android:id="@+id/btnSize0_500kb"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/language_card_unselected"
                    android:fontFamily="@font/open_sans_semi_bold"
                    android:gravity="center"
                    android:text="@string/_0_500_kb"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/btnSize500kb_1mb"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/language_card_unselected"
                    android:fontFamily="@font/open_sans_semi_bold"
                    android:gravity="center"
                    android:text="@string/_500kb_1mb"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:id="@+id/btnSize1mb_10mb"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/language_card_unselected"
                    android:fontFamily="@font/open_sans_semi_bold"
                    android:gravity="center"
                    android:text="@string/_1mb_10mb"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/btnSizeOver10mb"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/language_card_unselected"
                    android:fontFamily="@font/open_sans_semi_bold"
                    android:gravity="center"
                    android:text="@string/_10mb"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/selection_card_background"
            android:text="@string/clear"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnApply"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/photos_storage_color"
            android:text="@string/apply"
            android:textColor="@android:color/white" />
    </LinearLayout>


</LinearLayout>
