<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:clipToOutline="true"
    android:background="@drawable/corner_rounded_card">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/ic_exit"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_30sdp"
        android:fontFamily="@font/open_sans_semi_bold"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"
        android:text="@string/are_you_sure_you_want_to_exit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="@font/open_sans_medium"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/dark_gray"
        android:text="@string/if_you_exit_the_scan_results_will_be_deleted"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_15sdp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btExit"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:backgroundTint="@color/selection_card_background"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="@string/exit"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btCancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/white"
            android:backgroundTint="@color/photos_storage_color"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>